--- a/FrontEnd/src/app/kohama-yujin/programming/quiz-cpp/quiz-cpp.component.html
+++ b/FrontEnd/src/app/kohama-yujin/programming/quiz-cpp/quiz-cpp.component.html
@@ -1,5 +1,6 @@
 <app-programming-template
 [title]="title"
+[abbreviation]="abbreviation"
 [images]="images"
 [image_descriptions]="image_descriptions"
 [abstract_description]="abstract_description"
