--- a/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.html
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.html
@@ -6,9 +6,9 @@
         </div>
         <div class="sub-header-item">
             <button mat-button (click)="bachelor.scrollToTop()">テーマ（TOP）</button>
-            <button mat-button (click)="bachelor.scrollToAbstract()">概要スライド</button>
+            <button mat-button (click)="bachelor.scrollToAbstract()">概要</button>
             <button mat-button (click)="bachelor.scrollToBackground()">背景</button>
-            <button mat-button (click)="bachelor.scrollToRole()">開発期間・役割</button>
+            <button mat-button (click)="bachelor.scrollToRole()">期間・役割</button>
             <button mat-button (click)="bachelor.scrollToMethod()">手法・工夫</button>
             <button mat-button (click)="bachelor.scrollToAchievement()">成果</button>
             <button mat-button (click)="bachelor.scrollToTechnique()">使用技術</button>
