--- a/FrontEnd/src/app/kohama-yujin/programming/programming.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/programming/programming.component.scss
@@ -28,7 +28,11 @@
 
         mat-card-title {
             font-weight: bold;
+            font-size: 20px;
         }
+    }
+    mat-card-content {
+        font-size: 14px;
     }
 }
 
