--- a/FrontEnd/src/app/kohama-yujin/top/top.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/top/top.component.scss
@@ -7,12 +7,16 @@
     height: 100vh;
     display: flex;
     flex-direction :column;
-    align-items: center;  /* 縦中央揃え */
-    justify-content: center;  /* 横中央揃え */
+    align-items: center;
+    justify-content: center;
     padding: 0px 20%;
     position: relative;
+    h1, h2, h3{
+        margin: 5px 0px;
+    }
     p{
         color:#555;
+        margin: 5px 0px;
     }
     button{
         transition: all 0.2s ease;
@@ -29,6 +33,19 @@
     }
 }
 
+.title{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.even{
+    background-color: #fafafa;
+}
+
+.last{
+    height: calc(100vh - 60px);  /* フッターの高さを引いた分 */;
+}
+
 .top{
     height: calc(100vh - 60px);  /* ヘッダーの高さを引いた分 */;
     img{
@@ -38,26 +55,24 @@
     }
 }
 
-.profile{
-    padding: 0px 30%;
-}
-
 .skill{
+    padding: 0px 10%;
     .chart-container{
         display: flex;
-        justify-content: center;
         width: 100%;
+        height: 50vh;
+        align-items: center;
+        justify-content: center;
+        .chart-item{
+            display: flex;
+            flex-direction: column;
+            max-width: 50%;
+            align-items: center;
+            margin: 20px 0px;
+        }
     }
-    canvas{
-        max-height: 50vh !important;
-        max-width: 50% !important;
+    .description{
+        font-size: 12px;
+        margin: 10px 0px;       
     }
-}
-
-.even{
-    background-color: #fafafa;
-}
-
-.last{
-    height: calc(100vh - 60px);  /* フッターの高さを引いた分 */;
 }
