レスポンシブ追加

--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.html
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.html
@@ -2,7 +2,7 @@
   <div class="header-image">
     <a [routerLink]="['./']"><img src="images/kohama-yujin/header_kohama.png" /></a>
   </div>
-  <div class="header-link">
+  <div class="header-links">
     <button mat-flat-button [routerLink]="['./']">
       <mat-icon>home</mat-icon>ホーム
     </button>
