--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
@@ -78,3 +78,15 @@
     width: 150px;
   }
 }
+
+@media (max-width: 768px) {
+}
+
+@media (max-width: 1200px) {
+  .header-links{
+    display: none;
+  }
+}
+
+@media (min-width: 1201px) {
+}
