レスポンシブ追加

--- a/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.scss
@@ -33,3 +33,15 @@ h1{
         color: #555;
     }
 }
+
+@media (min-width: 1201px) {
+}
+
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 768px) {
+    .container{
+        padding: 0px 5%;
+    }
+}
