--- a/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.html
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.html
@@ -1,19 +1,19 @@
 <div class="container">
     <div class="sub-header between">
-        <div class="sub-header-item">
+        <div class="sub-header-item left">
             <mat-icon>biotech</mat-icon>
             <h2>卒業研究</h2>
         </div>
-        <div class="sub-header-item">
-            <button mat-button (click)="bachelor.scrollToTop()">テーマ（TOP）</button>
+        <div class="sub-header-item center">
+            <button mat-button (click)="bachelor.scrollToTop()">TOP</button>
             <button mat-button (click)="bachelor.scrollToAbstract()">概要</button>
             <button mat-button (click)="bachelor.scrollToBackground()">背景</button>
-            <button mat-button (click)="bachelor.scrollToRole()">期間・役割</button>
-            <button mat-button (click)="bachelor.scrollToMethod()">手法・工夫</button>
+            <button mat-button (click)="bachelor.scrollToRole()">担当・期間</button>
+            <button mat-button (click)="bachelor.scrollToMethod()">手法</button>
             <button mat-button (click)="bachelor.scrollToAchievement()">成果</button>
             <button mat-button (click)="bachelor.scrollToTechnique()">使用技術</button>
         </div>
-        <div class="sub-header-item">
+        <div class="sub-header-item right">
             <a href="https://github.com/kohama-yujin/b4-lip-sync-ar" target="_blank" rel="noopener">
                 <img class="github-img" src="images/core/github/github-mark.png" />
                 <img class="github-img" src="images/core/github/GitHub_Logo.png" />
