--- a/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.scss
@@ -1,4 +1,18 @@
 .container{
     background-color: #fafafa;
+}
 
+@media (min-width: 1201px) {
+}
+
+@media (max-width: 1200px) {
+    .center{
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .container{
+        padding: 0px 5%;
+    }
 }
