--- a/FrontEnd/src/app/kohama-yujin/programming/programming-template/programming-template.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/programming/programming-template/programming-template.component.scss
@@ -22,7 +22,7 @@ text-align: center;
     align-items: center;
     margin-top: 20px;
     color: #555;
-    
+
     .img-div {
         position: absolute;
         width: 100%;
@@ -81,5 +81,32 @@ text-align: center;
     
     p, ul{
         color: #555;
+    }
+}
+
+@media (min-width: 1201px) {
+}
+
+@media (max-width: 1200px) {
+    .center {
+        display: none;
+    }
+    .slider {
+        .img-div {
+            position: absolute;
+            height: 40vh;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .container{
+        padding: 0px 5%;
+    }
+    .slider {
+        .img-div {
+            position: absolute;
+            height: 30vh;
+        }
     }
 }
