--- a/FrontEnd/src/app/kohama-yujin/programming/programming.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/programming/programming.component.scss
@@ -1,5 +1,5 @@
 .container {
-    height: calc(100vh - 60px);  /* ヘッダーの高さを引いた分 */;
+    min-height: calc(100vh - 60px);  /* ヘッダーの高さを引いた分 */;
     display: flex;
     flex-direction: column;
     align-items: center;  /* 縦中央揃え */
@@ -40,4 +40,19 @@
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
     transform: translateY(-5px);
     cursor: pointer;
+}
+
+@media (min-width: 1201px) {
+}
+
+@media (max-width: 1200px) {
+    .content-card {
+        max-width: 45%;
+    }
+}
+
+@media (max-width: 768px) {
+    .content-card {
+        max-width: 90%;
+    }
 }
