--- a/FrontEnd/src/app/kohama-yujin/top/top.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/top/top.component.scss
@@ -60,7 +60,7 @@
     .chart-container{
         display: flex;
         width: 100%;
-        height: 50vh;
+        max-height: 50vh;
         align-items: center;
         justify-content: center;
         .chart-item{
@@ -72,7 +72,28 @@
         }
     }
     .description{
-        font-size: 12px;
         margin: 10px 0px;       
+        p {
+            font-size: 12px;
+        }
+    }
+}
+
+@media (min-width: 1201px) {
+}
+
+@media (max-width: 1200px) {
+    .top{
+        height: calc(100vh - 120px);  /* ヘッダーの高さを引いた分 */;
+    }
+}
+
+@media (max-width: 768px) {
+    .skill{
+        .description{
+            p{
+                font-size: 10px;
+            }
+        }
     }
 }
