--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -117,3 +117,18 @@ mat-icon {
     }
   }
 }
+
+@media (min-width: 1201px) {
+}
+
+
+@media (max-width: 768px) {
+}
+@media (max-width: 1200px) {
+  h1 {
+    font-size: 28px;
+  }
+  p {
+    font-size: 14px;
+  }
+}
