--- a/FrontEnd/src/app/kohama-yujin/top/top.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/top/top.component.scss
@@ -96,6 +96,7 @@
             flex-direction: column;
             max-height: 80vh;
             .chart-item{
+                width: 80%;
                 margin: 20px auto;
             }
         }
